fixed broken pic link

--- a/grad.html
+++ b/grad.html
@@ -32,51 +32,72 @@ margin:-50px -50px 50px;
 </head>
 <body>
 <div id="header"><h1>Here's the header</h1></div>
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
 
-<div class="block"><img src="Jinx notes.jpg" class="image">Here's a block for the cool layout&trade;</div>
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+<div class="block"><img src="logos/nyse_short.png" class="image">Here's a block for the cool layout&trade;</div>
+
+
+
 
 </body>
 </html>
